# sdl3-project-template

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp
